package com.shudss00.noteapp.core.util

/**
 * @author @s9myon on 05.03.2023
 */
object TestTags {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val NODE_ITEM = "NODE_ITEM"
}