<resources>
    <string name="app_name">NoteApp</string>
    <string name="sort">Sort</string>
</resources>